# pycasso

./: .config  .config-example  .gitignore  LICENSE  README.md  apitest.py  config_wrapper.py  constants.py  file_loader.py  file_operations.py  image_functions.py  omni-epd.ini  pijuice_handler.py  pijuice_script.py  provider.py  pycasso.py  pycasso.service.template  pyproject.toml  requirements.txt  review_api.py  review_screen.py  run.py  run.sh  screentest.py  set_keys.py  setup.cfg  setup.sh  test_api.py
.github/: flake8.yml
.github/workflows/: python-package.yml  requirements.txt
examples/: .config-example  .creds-example  review_prompt_generator.py  review_screen.py  review_stability_api.py  run.py  test_quote_method.py
examples/prompts/: artists-example.txt  prompts-example.txt  subjects-example.txt
install/: requirements.txt
prompts/: artists-example.txt  artists.txt  prompts-example.txt  prompts.txt  subjects-example.txt  subjects.txt
pycasso/: config_wrapper.py  constants.py  file_operations.py  image_functions.py  pijuice_handler.py  pycasso.py
resources/icons/: REFERENCE
scripts/: install.sh  migrate_config.py  pijuice_disable_leds.py  run.py  run.sh  set_keys.py
src/piblo/: config_wrapper.py  constants.py  file_operations.py  image_functions.py  pijuice_handler.py  post_wrapper.py  prompt_block.py  prompt_generation.py  (+2 more)
tests/: __init__.py  test_config_wrapper.py  test_file_loader.py  test_file_operations.py  test_image_functions.py  test_prompt_block.py  test_prompt_generation.py  test_provider.py  test_pycasso.py
web/: web_interface.py
(+30 files in other folders)
