[metadata]
name = piblo
version = 1.2.12
author = Jess Farber
author_email = default@jessfarber.com
description = A system to send AI generated art to an E-Paper display through a Raspberry PI unit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jezs00/pycasso
licence = GNU General Public License v3 (GPLv3)
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3

[options]
install_requires =
    Pillow
    Keyring
    requests
    numpy
    webuiapi
    omni-epd @ git+https://github.com/robweber/omni-epd.git#egg=omni-epd
    stability-sdk @ git+https://github.com/Stability-AI/stability-sdk.git
    openai @ git+https://github.com/openai/openai-python.git
    mastodon.py

package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.extras_require]
dev =
    flake8
    pytest

pijuice =
    pijuice

[options.packages.find]
where = src
